# HimalayanTokenizer

./: .gitignore  Cargo.toml  README.md  conda_create.sh  pyproject.toml  requirements.txt  test_tokenizer.py  train_nepali_tok.py
.github/workflows/: release.yml  tests.yaml  tests.yml
notebook/: baseline_test.ipynb  himalayantok_benchmark_results.json  sample.txt  test.ipynb
python/HimalayanTokenization/: __init__..py  __init__.py
python/himalayan_tokenizer/: __Init__.py  vocab.tsv
src/: lib.rs
tests/: test_unit.py  unit_test_bpe.py
unit_test/: unit_test_bpe.py
vocab_nepbpe/: vocab_v4.tsv.bak
