[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "himalayan-tokenizer"
version = "0.0.3"
description = "NepBPE v4: a morphological BPE tokenizer for Nepali and Latin scripts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kumar Dahal", email = "kumardahal536@gmail.com"}
]
maintainers = [
    {name = "Kumar Dahal", email = "kumardahal536@gmail.com"}
]
keywords = ["tokenizer", "nepali", "bpe", "morphology", "nlp"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers>=5.14.0",
]

[project.urls]
Homepage = "https://github.com/k17hawk/HimalayanTokenizer"
"Bug Tracker" = "https://github.com/k17hawk/HimalayanTokenizer/issues"
Repository = "https://github.com/k17hawk/HimalayanTokenizer"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]


[tool.maturin]
python-source = "python"
include = [
    { path = "python/himalayan_tokenizer/vocab.tsv", format = "wheel" },
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"